prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/interp_str_not_string_2.diag.txt
ERROR: expected 'expression'
testData/diagnostics/interp_str_not_string_2.nut:5:8

println($foo())
        ^


